app-code/authentik/authentik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-ingress
  namespace: security
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`atlantis.fynbos-prometheus.ts.net`) && PathPrefix(`/outpost.goauthentik.io`)
      kind: Rule
      priority: 100
      services:
        - name: authentik-svc
          port: 9000
