app-code/authentik/authentik-outpost-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik-outpost-ingress
  namespace: security
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: PathPrefix(`/outpost.goauthentik.io`)
      kind: Rule
      priority: 100
      services:
        - name: authentik-svc
          port: 9000
